my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBITRO_2/T_EBITRO_2-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EBITRO_2_STRUCT_H
#define T_EBITRO_2_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EBITRO_2(void);


#endif /* not T_EBITRO_2_STRUCT_H */
